--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
 *
 {
     margin: 0;
@@ -69,10 +70,13 @@ section #text
     font-size: 10vw;
     text-align: center;
     line-height: 0.55em;
+    font-family: 'Rancho', cursive;
 }
 section #text span
 {
     font-size: 0.20em;
     letter-spacing: 2px;
     font-weight: 400;
+    font-family: 'poppins', sans-serif;
+
 }
