--- a/style.css
+++ b/style.css
@@ -13,15 +13,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif, 'poppins'}
 .w3-Poppins{font-family: 'poppins', sans-serif;}
 .w3-container2{padding:0.01em 16px}
 .w3-text-navy-head{color:#094b65; font-weight: 600; font-family: Poppins; margin-bottom: 10px;opacity:0.80!important}
-.w3-halfffe{float:right ;height:100%}
+.w3-halfe2{float:right ;height:100%}
 .w3-center-content {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
   }
-/* .w3-image2{width:100%;height:auto}img{vertical-align:middle}a{color:inherit} */
-
 #home h1{
     color: rgb(200, 170, 208);
     font-family: Poppins;
@@ -36,23 +34,26 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif, 'poppins'}
     font-family: sans-serif;
     font-size: 24px;
 }
-
 .about-text {
     float: left;
     padding: 15px;
     border: 1px;
 }
-
 .about-image {
     float: left;
-    margin-bottom: 20px; /* Adjust the value as needed */
+    margin-bottom: 20px;
   }
-  
-  .about-image img {
+.about-image img {
     width: 65%;
     position:sticky;
     height: auto;
     display: block;
+    right:150px ;
+  }
+  .contact-section{
+    padding: 15px;
+    margin-left: 30px;
+  
   }
 .skill-icon{
     position:relative;top:50%;left:50%;transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);z-index:2;width: 50%;
@@ -60,8 +61,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif, 'poppins'}
 .icon-container {
     margin-bottom: 30px; /* Increase vertical distance between images */
   }
-/* ...........social contact......*/
 
+/* ...........social contact......*/
 .social-icons {
     display: flex;
     justify-content: center;
@@ -71,7 +72,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif, 'poppins'}
     color: #aaa;
     transition: color 0.2s;
     margin: 0 5px;
-    /* position: relative; */
 }
 .social-icon:hover{
     color: rgb(164, 130, 174);
